Fixed body overflow mistake

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
   width: 100vw;
   font-family: 'Open Sans', sans-serif;
   color: var(--clr-white);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 #root {
   max-width: 1440px;
